--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;500;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,100&display=swap');
+
 
 .font-poppins{
     font-family: 'Poppins', sans-serif;
+}
+
+.font-anton{
+    font-family: "Anton", sans-serif;
 }
